# lightdm-server-greeter

./: README.md  pubspec.yaml  test.sh
lib/: generated_bindings.dart  main.dart
lightdm_interop/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  interop.c  interop.h  liblightdm_interop.so.1  liblightdm_interop.so.1.0.0
linux/: CMakeLists.txt
linux/runner/: my_application.cc
test/: widget_test.dart
